--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -8,7 +8,24 @@
     <title>Posts</title>
     <link rel="stylesheet" href="{% static 'css/user_profile.css' %}">
 </head>
-
+    <script>
+        function confirmDelete(url) {
+            var result = confirm("Are you sure you want to delete?");
+            if (result) {
+                window.location.href = url;  // Redirect to the delete URL
+            }
+        }
+        function confirmEdit(url) {
+            var result = confirm("Are you sure you want to edit?");
+            if (result) {
+                window.location.href = url;  // Redirect to the edit URL
+            }
+        }
+        function redirectToShare(url) {
+            // Perform any additional actions if needed
+            window.location.href = url;  // Redirect to the share URL
+        }
+    </script>
 <body style="background-image: url('{% static 'css/register.jpg' %}'); background-size: cover;">
 
     <header style="background-color: indigo; padding: 20px; margin-top: -19px;
@@ -33,16 +50,12 @@
             <li class="post-item">
                 <h4><a href="{% url 'edds' post.slug %}">{{ post.title }}</a></h4>
                 <div class="post-description">{{ post.description|slice:":20" }}...</div>
-                <img src="{{ post.picture.url }}" alt="Post Image" class="post-image" style="width:200px;
-    height:200px;">
+                <img src="{{ post.picture.url }}" alt="Post Image" class="post-image" style="width:200px;height:200px;">
                 <div class="post-details">
                     <p><a href="{% url 'posts' post.id post.slug %}">Published: {{ post.publish }}</a></p>
-                    <button id="btn1" type="button" class="deletebtn"><a id="color1"
-                            href="{% url 'delete_post' post.id post.slug %}">Delete</a></button>
-                    <button id="btn1" type="button" class="editpost"><a id="color1" href="{% url 'edit_post' post.id post.slug %}">Edit
-                            Post</a></button>
-                    <button id="btn1" type="button" class="sharepost"><a id="color1"
-                            href="{% url 'share_post' post.id post.slug %}"><strong>Share Post</strong></a></button>
+                    <button id="btn1" type="button" class="deletebtn" onclick="confirmDelete('{% url 'delete_post' post.id post.slug %}')">Delete</a></button>
+                    <button id="btn1" type="button" class="editpost" onclick="confirmEdit('{% url 'edit_post' post.id post.slug %}')">Edit Post</a></button>
+                    <button id="btn1" type="button" class="sharepost" onclick="redirectToShare('{% url 'share_post' post.id post.slug %}')"><strong>Share Post</strong></button>
                 </div>
             </li>
             {% endfor %}
