--- a/templates/share_anketa.html
+++ b/templates/share_anketa.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-{% load static %}
+{%load static%}
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Share questionaire</title>
     <link rel="stylesheet" href="{% static 'css/share_post.css' %}">
-    <title>Copy and Share Link</title>
+
 </head>
 <body>
-    <a href="{% url 'home' %}">
-        <img class="iconhome" src="{% static 'ikon/house-solid.svg' %}" alt="Home Icon" width="100" height="100" style="position:absolute; left:900px; margin-top:300px;">
-    </a>
-
+    <a href="{% url 'home'%}"><img class="iconhome" src="{% static 'ikon/house-solid.svg' %}" alt="Icon Description" width="100" height="100" style="position:absolute; left:900px; margin-top:300px;"></a>
     <div class="centered-container">
-        <input type="text" id="postLink" value="{{ post_url.get_absolute_url }}">
+        <input type="text" id="anketalink" value="{{ anketa_url.get_absolute_url}}">
         <button class="btn3" id="copyLinkButton">Copy Link</button>
 
         <div class="dropdown">
             <div class="dropdown-content">
                 <div>
-                    <a href="https://t.me/share/url?url={{post_url.get_absolute_url}}" target="_blank">
+                    <a href="https://t.me/share/url?url={{anketa_url.get_absolute_url}}" target="_blank">
                         <img src="{% static 'ikon/telegram-icon.svg' %}" alt="Telegram Share">
                     </a>
                 </div>
@@ -27,16 +26,15 @@
 
     <script>
         document.getElementById("copyLinkButton").addEventListener("click", function() {
-            const postLink = document.getElementById("postLink");
+            const postLink = document.getElementById("anketalink");
             postLink.select();
             document.execCommand("copy");
             postLink.setSelectionRange(0, 0);
             this.textContent = "Link Copied!";
             this.style.backgroundColor = "green"; // Change button color to green
-        });;
+        });
 
-        // Close the dropdown if the user clicks outside of it
-        window.onclick = function(event) {
+         window.onclick = function(event) {
             if (!event.target.matches('.btn3')) {
                 const dropdowns = document.getElementsByClassName("dropdown-content");
                 for (const dropdown of dropdowns) {
